 * `known.nonnull` => `nulltest.redundant`
 * `initialization.static.fields.uninitialized` => `initialization.static.field.uninitialized`,
   and it is now issued on the field rather than on the class
 * new `initialization.field.uninitialized` is issued on the field instead of
   `initialization.fields.uninitialized` on the class, if there is no
   explicitly-written constructor.

**Implementation details:**

Changes to protected fields in `OverrideChecker`:
 * Removed `overriderMeth`, `overriderTyp`, `overriddenMeth`, `overriddenTyp`
 * Renamed `methodReference` => `isMethodReference`
 * Renamed `overridingType` => `overriderType`
 * Renamed `overridingReturnType` => `overriderReturnType`

Moved JavaExpressionParseUtil#fromVariableTree to JavaExpression.

**Closed issues:**

---------------------------------------------------------------------------

Version 3.10.0, February 1, 2021

**User-visible changes:**

Moved utility classes from `checker-qual.jar` to the new `checker-util.jar`.
Also, added `util` to the end of all the packages of the utility classes.

In Maven Central, `checker.jar` no longer contains duplicates of qualifiers in
`checker-qual.jar`, but rather uses a Maven dependency. A fat jar file with all
the dependencies (like the old `checker.jar`) is available in Maven Central with
the classifier "all".

When supplying the `-Ainfer=...` command-line argument, you must also supply `-Awarns`.

Replaced several error message keys:
 * `contracts.precondition.expression.parameter.name`
 * `contracts.postcondition.expression.parameter.name`
 * `contracts.conditional.postcondition.expression.parameter.name`
 * `method.declaration.expression.parameter.name`
by new message keys:
 * `expression.parameter.name.invalid`
 * `expression.parameter.name.shadows.field`

**Implementation details:**

Deprecated `ElementUtils.enclosingClass`; use `ElementUtils.enclosingTypeElement`.

Removed classes (use `SourceChecker` instead):
 * `BaseTypeContext`
 * `CFContext`