@@ -9,9 +9,9 @@ import org.checkerframework.framework.qual.SubtypeOf;
 
 /**
  * This is a string that is a valid {@linkplain
- * org.checkerframework.checker.signature.qual.FullyQualifiedName fully qualified name} and a valid
- * {@linkplain org.checkerframework.checker.signature.qual.BinaryName binary name}. It represents a
- * non-array, non-inner, non-primitive class: dot-separated identifiers.
+ * org.checkerframework.checker.signature.qual.CanonicalName canonical name} and a valid {@linkplain
+ * org.checkerframework.checker.signature.qual.BinaryName binary name}. It represents a non-array,
+ * non-inner, non-primitive class.
  *
  * <p>Examples: int, MyClass, java.lang, java.lang.Integer
  *
@@ -20,5 +20,5 @@ import org.checkerframework.framework.qual.SubtypeOf;
 @Documented
 @Retention(RetentionPolicy.RUNTIME)
 @Target({ElementType.TYPE_USE, ElementType.TYPE_PARAMETER})
-@SubtypeOf({DotSeparatedIdentifiersOrPrimitiveType.class, BinaryName.class})
-public @interface DotSeparatedIdentifiers {}
+@SubtypeOf({CanonicalName.class, DotSeparatedIdentifiers.class})
+public @interface CanonicalNameAndBinaryName {}
