@@ -20,6 +20,11 @@ import org.checkerframework.framework.qual.TypeUseLocation;
 @Retention(RetentionPolicy.RUNTIME)
 @Target({ElementType.TYPE_USE, ElementType.TYPE_PARAMETER})
 @TargetLocations({TypeUseLocation.EXPLICIT_LOWER_BOUND, TypeUseLocation.EXPLICIT_UPPER_BOUND})
-@SubtypeOf({FieldDescriptorForPrimitive.class, PrimitiveType.class, MethodDescriptor.class})
+@SubtypeOf({
+    FieldDescriptorForPrimitive.class,
+    PrimitiveType.class,
+    CanonicalNameAndBinaryName.class,
+    MethodDescriptor.class
+})
 @DefaultFor({TypeUseLocation.LOWER_BOUND})
 public @interface SignatureBottom {}
